k8s/working-google/ml-service.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mldeployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ml
    spec:
      containers:
      - name: helloml
        image: gcr.io/dazzling-tensor-217/maerskline:2.0
        ports:
        - name: httpport
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: maerskline
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30401
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: ml
