k8s/working-google/oidc-service.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: regdeployment
spec:
  replicas: 4
  template:
    metadata:
      labels:
        app: regapp
    spec:
      containers:
      - name: registration
        image: gcr.io/dazzling-tensor-217/dbplay-registration:latest
        ports:
        - name: httpport
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: regsvc
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30406
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: regapp
