k8s/working-google/saf-service.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: safdeployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: saf
    spec:
      containers:
      - name: hellosaf
        image: gcr.io/dazzling-tensor-217/safmarine:2.0
        ports:
        - name: httpport
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: safmarine
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30402
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: saf
